@@ -110,6 +110,7 @@ Files included in the binary package:
   /usr/lib/cygport/lib/gstreamer.cygclass
   /usr/lib/cygport/lib/gtk2-perl.cygclass
   /usr/lib/cygport/lib/gtkmm.cygclass
+  /usr/lib/cygport/lib/hg.cygclass
   /usr/lib/cygport/lib/java.cygclass
   /usr/lib/cygport/lib/kde3.cygclass
   /usr/lib/cygport/lib/lua.cygclass
