@@ -21,6 +21,7 @@ dist_cygclass_DATA = 			\
 	gstreamer.cygclass			\
 	gtk2-perl.cygclass			\
 	gtkmm.cygclass				\
+	hg.cygclass					\
 	java.cygclass				\
 	kde3.cygclass				\
 	lua.cygclass				\
